--- a/static/css/main.css
+++ b/static/css/main.css
@@ -218,7 +218,7 @@ body::before {
   .section {
     padding: 0 2%;
     min-height: auto;
-    padding-top: 120px; /* Increased for mobile header */
+    padding-top: 90px; /* Reduced from 120px */
     padding-bottom: 50px;
   }
   
@@ -246,7 +246,7 @@ body::before {
 @media (max-width: 480px) {
   .section {
     padding: 0 1rem;
-    padding-top: 100px; /* Adjusted for smaller screens */
+    padding-top: 80px; /* Reduced from 100px */
     padding-bottom: 40px;
   }
   
