--- a/templates/sections/experience.html
+++ b/templates/sections/experience.html
@@ -45,7 +45,7 @@
       
       <div class="experience-item">
         <div class="experience-date">
-          <span>{% trans "2021 - Present" %}</span>
+          <span>{% trans "2022 - Oct 2024" %}</span>
         </div>
         <div class="experience-content">
           <h3>{% trans "Backend Developer & AI Engineer" %}</h3>
