Add WebSocket skill to experience and skills sections; update project card for Yaklabs IoT Platform with detailed description and tags

--- a/templates/sections/experience.html
+++ b/templates/sections/experience.html
@@ -21,6 +21,7 @@
             <span class="experience-skill" role="listitem">DevOps</span>
             <span class="experience-skill" role="listitem">Flask</span>
             <span class="experience-skill" role="listitem">Django</span>
+            <span class="experience-skill" role="listitem">WebSocket</span>
             <span class="experience-skill" role="listitem">{% trans "Microservices" %}</span>
             <span class="experience-skill" role="listitem">{% trans "Cloud Platforms" %}</span>
           </div>
