--- a/templates/sections/home.html
+++ b/templates/sections/home.html
@@ -14,8 +14,8 @@
 
         <!-- Main Title -->
         <h1>
-          Hi, I'm <span class="highlight">Mirshod Qayimov</span><br>
-          Building Digital Solutions
+          {% blocktrans %}Hi, I'm <span class="highlight">Mirshod Qayimov</span><br>
+          Building Digital Solutions{% endblocktrans %}
         </h1>
 
         <div class="typing-container">
