--- a/templates/sections/skills.html
+++ b/templates/sections/skills.html
@@ -16,6 +16,7 @@
           <span class="skill-tag">REST APIs</span>
           <span class="skill-tag">{% trans "Microservices" %}</span>
           <span class="skill-tag">PyGame</span>
+          <span class="skill-tag">WebSocket</span>
         </div>
       </div>
       
@@ -36,6 +37,7 @@
           <span class="skill-tag">HTML5</span>
           <span class="skill-tag">CSS3</span>
           <span class="skill-tag">SCSS</span>
+          <span class="skill-tag">WebRTC</span>
         </div>
       </div>
       
