Update translations for Russian and Uzbek languages; modify footer status message to reflect "Working from home"

--- a/templates/sections/footer.html
+++ b/templates/sections/footer.html
@@ -140,7 +140,7 @@
         <div class="footer-status">
           <div class="status-indicator">
             <div class="status-dot"></div>
-            <span>{% trans "Available for new opportunities" %}</span>
+            <span>{% trans "Working from home" %}</span>
           </div>
         </div>
 
